k8s/librespeed-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed-app
  namespace: librespeed
spec:
  selector:
    app: librespeed-app
  ports:
    - port: 80
      targetPort: 8080
